--- a/index.html
+++ b/index.html
@@ -24,18 +24,27 @@
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/adb8d4875b.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="font-family: 'Manrope';">
     <header>
-        <section class="banner">
-            <div>
-                <h2>It's good tea time at The Tea House</h2>
-            </div>
-            <div>
-
-            </div>
-        </section>
     </header>
-    <main>
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+      <section class="banner flex pt-10 mb-20">
+          <div class="space-y-4 w-1/2">
+              <h2 class="text-7xl	">It's good tea time at The Tea House</h2>
+              <p class="text-xl text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+              <button class="text-xl text-white white-900 font-bold bg-gradient-to-r to-[#FF0000] from-[#ff8938] p-4 rounded-md">Order Now<i class="fa-solid fa-square-up-right pl-2"></i></button>
+          </div>
+          <div class="image">
+            <img class="w-full" src="images/banner.png" alt="">
+            <div class="absolute top-100 flex gap-2 items-center bg-white shadow-lg rounded-lg p-6">
+              <i class="fa-solid fa-star text-3xl text-amber-300"></i>
+              <div>
+                <h3 class="text-3xl font-bold">5.00</h3>
+                <p class="text-gray-400">Trust Pilot Ratings</p>
+              </div>
+            </div>
+          </div>
+      </section>
 
     </main>
     <footer>
