--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
       <section class="banner flex pt-10 mb-20">
           <div class="space-y-4 w-1/2">
-              <h2 class="text-7xl	">It's good tea time at The Tea House</h2>
+              <h2 class="text-7xl	font-bold">It's good tea time at The Tea House</h2>
               <p class="text-xl text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
               <button class="text-xl text-white white-900 font-bold bg-gradient-to-r to-[#FF0000] from-[#ff8938] p-4 rounded-md">Order Now<i class="fa-solid fa-square-up-right pl-2"></i></button>
           </div>
@@ -45,7 +45,57 @@
             </div>
           </div>
       </section>
+      <section class="featured">
+        <h2 class="text-center text-5xl font-bold">Our Featured Products</h2>
+        <p class="text-center text-gray-400 py-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <div class="featured-container grid grid-cols-4 gap-6">
+          <div class="bg-gradient-to-b from-[#f4f4f4] p-8 rounded-lg">
+            <img class="mx-auto" src="images/tea-1.png" alt="">
+            <h3 class="text-3xl font-bold text-center py-3">Milk Tea</h3>
+            <p class="text-center text-gray-400">Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="bg-gradient-to-b from-[#f4f4f4] p-8 rounded-lg">
+            <img class="mx-auto" src="images/tea-2.png" alt="">
+            <h3 class="text-3xl font-bold text-center py-3">Black Tea</h3>
+            <p class="text-center text-gray-400">Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="bg-gradient-to-b from-[#f4f4f4] p-8 rounded-lg">
+            <img class="mx-auto" src="images/tea-3.png" alt="">
+            <h3 class="text-3xl font-bold text-center py-3">Lemon Tea</h3>
+            <p class="text-center text-gray-400">Creamer could be replaced by fresh milk</p>
+          </div>
+          <div class="bg-gradient-to-b from-[#f4f4f4] p-8 rounded-lg">
+            <img class="mx-auto" src="images/tea-4.png" alt="">
+            <h3 class="text-3xl font-bold text-center py-3">Green Tea</h3>
+            <p class="text-center text-gray-400">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+      </section>
+      <section class="my-24">
+        <div class="grid grid-cols-2 gap-6">
+          <!-- image section  -->
+           <div class="grid gap-4 grid-cols-2 grid-rows-3">
+            <div class="h-34 rounded-xl bg-gradient-to-r from-red-100 to-red-50"> </div>
+            <div class="rounded-xl bg-orange-50 row-span-2">
+              <img class="mx-auto py-5" src="images/fresh-1.png" alt="">
+            </div>
+            <div class="rounded-xl bg-orange-50 row-span-2">
+              <img class="mx-auto py-5" src="images/fresh-1.png" alt="">
+            </div>
+            <div class="h-34 rounded-xl bg-gradient-to-r from-red-100 to-red-50"> </div>
 
+           </div>
+           <div>
+            <h2 class="text-5xl font-bold">Great Tea, Freshly Presented</h2>
+            <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h4 class="text-3xl font-bold">Unique Taste</h4>
+            <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <h4 class="text-3xl font-bold">Premium Quality</h4>
+            <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+           </div>
+
+        </div>
+      </section>
     </main>
     <footer>
 
